# cnnplus

./: CMakeLists.txt  README.rst  README.txt  TODO.txt
CMakeModules/: FindCppUnit.cmake  machine-settings.cmake
CMakeModules/.svn/: all-wcprops  entries
CMakeModules/.svn/text-base/: FindCppUnit.cmake.svn-base  FindOpenCV.cmake.svn-base  machine-settings.cmake.svn-base
CMakeModules/cuda/: FindCUDA.cmake
CMakeModules/cuda/.svn/: all-wcprops  entries
CMakeModules/cuda/FindCUDA/.svn/: all-wcprops  entries
benchmarks/: CMakeLists.txt  bench_garcianet.cc  bench_jahrernet.cc  bench_lenet5.cc  bench_mlpnet.cc  bench_simardnet.cc
benchmarks/.svn/: all-wcprops  entries
benchmarks/.svn/text-base/: CMakeLists.txt.svn-base  bench_garcianet.cc.svn-base  bench_jahrernet.cc.svn-base  bench_lenet5.cc.svn-base  bench_mlpnet.cc.svn-base  bench_simardnet.cc.svn-base
cnnplus/: CMakeLists.txt
cnnplus/.svn/: all-wcprops  entries
cnnplus/.svn/text-base/: CMakeLists.txt.svn-base
cnnplus/cimg/: CHANGES.txt  CImg.h  README.txt
cnnplus/cimg/.svn/: all-wcprops  entries
cnnplus/include/: batchtrainer.hh  cbclfacedatasrc.hh  cimg.hh  common.hh  contbl.hh  convlayer.hh  cuconvlayer.hh  cudautils.hh  cufulllayer.hh  cufulllayernet.hh  cugarcianet.hh  cugradienttest.hh  cujahrernet.hh  culayer.hh  culenet5.hh  culolnet.hh  cumomentumtrainer.hh  cumvli.hh  cuneuralnet.hh  cuphungnet.hh  curproptrainer.hh  cusimardnet.hh  cusquasher.hh  cusublayer.hh  datasource.hh  datasrcview.hh  elastdistdatasrc.hh  error.hh  errorfnc.hh  facefindernet.hh  fulllayer.hh  fulllayernet.hh  garcianet.hh  gradienttest.hh  jacobiantest.hh  jahrernet.hh  layer.hh  lenet5.hh  lolnet.hh  matdatasrc.hh  (+19 more)
cnnplus/include/.svn/: all-wcprops  entries
cnnplus/include/.svn/text-base/: batchtrainer.hh.svn-base  cbclfacedatasrc.hh.svn-base  cimg.hh.svn-base  common.hh.svn-base  contbl.hh.svn-base  convlayer.hh.svn-base  cuconvlayer.hh.svn-base  cudautils.hh.svn-base  cufulllayer.hh.svn-base  cufulllayernet.hh.svn-base  cugarcianet.hh.svn-base  cugradienttest.hh.svn-base  cujahrernet.hh.svn-base  culayer.hh.svn-base  culenet5.hh.svn-base  culolnet.hh.svn-base  cumomentumtrainer.hh.svn-base  cumvli.hh.svn-base  cuneuralnet.hh.svn-base  cuphungnet.hh.svn-base  curproptrainer.hh.svn-base  cusimardnet.hh.svn-base  cusquasher.hh.svn-base  cusublayer.hh.svn-base  datasource.hh.svn-base  datasrcview.hh.svn-base  elastdistdatasrc.hh.svn-base  error.hh.svn-base  errorfnc.hh.svn-base  facefindernet.hh.svn-base  fulllayer.hh.svn-base  fulllayernet.hh.svn-base  garcianet.hh.svn-base  gradienttest.hh.svn-base  jacobiantest.hh.svn-base  jahrernet.hh.svn-base  layer.hh.svn-base  lenet5.hh.svn-base  lolnet.hh.svn-base  matdatasrc.hh.svn-base  (+19 more)
cnnplus/src/: CMakeLists.txt  batchtrainer.cc  cbclfacedatasrc.cc  contbl.cc  convlayer.cc  datasrcview.cc  elastdistdatasrc.cc  errorfnc.cc  facefindernet.cc  fulllayer.cc  fulllayernet.cc  garcianet.cc  gradienttest.cc  jacobiantest.cc  jahrernet.cc  layer.cc  lenet5.cc  lolnet.cc  matdatasrc.cc  mathli.cc  matvecli.cc  mnistsource.cc  momentumtrainer.cc  normdatasrc.cc  onlinetrainer.cc  phungnet.cc  propsbench.cc  randutil.cpp  rproptrainer.cc  simardnet.cc  squasher.cc  sublayer.cc  subsetdatasrc.cc  tests.cc  timer.cc  trainer.cc  uniondatasrc.cc
cnnplus/src/.svn/: all-wcprops  entries
cnnplus/src/.svn/text-base/: CMakeLists.txt.svn-base  batchtrainer.cc.svn-base  cbclfacedatasrc.cc.svn-base  contbl.cc.svn-base  convlayer.cc.svn-base  datasrcview.cc.svn-base  elastdistdatasrc.cc.svn-base  errorfnc.cc.svn-base  facefindernet.cc.svn-base  fulllayer.cc.svn-base  fulllayernet.cc.svn-base  garcianet.cc.svn-base  gradienttest.cc.svn-base  jacobiantest.cc.svn-base  jahrernet.cc.svn-base  layer.cc.svn-base  lenet5.cc.svn-base  lolnet.cc.svn-base  matdatasrc.cc.svn-base  mathli.cc.svn-base  matvecli.cc.svn-base  mnistsource.cc.svn-base  momentumtrainer.cc.svn-base  normdatasrc.cc.svn-base  onlinetrainer.cc.svn-base  phungnet.cc.svn-base  propsbench.cc.svn-base  randutil.cpp.svn-base  rproptrainer.cc.svn-base  simardnet.cc.svn-base  squasher.cc.svn-base  sublayer.cc.svn-base  subsetdatasrc.cc.svn-base  tests.cc.svn-base  timer.cc.svn-base  trainer.cc.svn-base  uniondatasrc.cc.svn-base
cnnplus/src/cuda/: CMakeLists.txt  cuconvlayer.cu  cufulllayer.cc  cufulllayernet.cc  cugarcianet.cc  cugradienttest.cc  cujahrernet.cc  culenet5.cc  culolnet.cc  cumomentumtrainer.cu  cumvli.cc  cumvli.cu  cuphungnet.cc  curproptrainer.cu  cusimardnet.cc  cusquasher.cu  cusublayer.cu
cnnplus/src/cuda/.svn/: all-wcprops  entries
data/.svn/: all-wcprops  entries
data/cbcl/.svn/: all-wcprops  entries
data/mnist/.svn/: all-wcprops  entries
data/phung/: train_data2.mat
data/phung/.svn/: all-wcprops  entries
examples/: CMakeLists.txt  facefinder.cc  show_cbclfaces.cc  show_matsrc.cc  show_mnist.cc  test_precision.cc  train_facefindernet.cc  train_facefindernet2.cc  train_garcianet.cc  train_jahrernet.cc  train_lenet5.cc  train_lenet5_bench.cc  train_lolnet.cc  train_mlpnet.cc  train_phungnet.cc  train_simardnet.cc
examples/.svn/: all-wcprops  entries
examples/.svn/text-base/: CMakeLists.txt.svn-base  facefinder.cc.svn-base  show_cbclfaces.cc.svn-base  show_matsrc.cc.svn-base  show_mnist.cc.svn-base  test_precision.cc.svn-base  train_facefindernet.cc.svn-base  train_facefindernet2.cc.svn-base  train_garcianet.cc.svn-base  train_jahrernet.cc.svn-base  train_lenet5.cc.svn-base  train_lenet5_bench.cc.svn-base  train_lolnet.cc.svn-base  train_mlpnet.cc.svn-base  train_phungnet.cc.svn-base  train_simardnet.cc.svn-base
tests/: CMakeLists.txt  test_cumvli.cc  test_jahrernet.cc  test_lenet5.cc  test_matvecli.cc  test_mlpnet.cc  test_simardnet.cc
tests/.svn/: all-wcprops  entries
tests/.svn/text-base/: CMakeLists.txt.svn-base  test_cumvli.cc.svn-base  test_jahrernet.cc.svn-base  test_lenet5.cc.svn-base  test_matvecli.cc.svn-base  test_mlpnet.cc.svn-base  test_simardnet.cc.svn-base
win32/.svn/: all-wcprops  entries
win32/include/.svn/: all-wcprops  entries
win32/libs/.svn/: all-wcprops  entries
(+43 files in other folders)
